--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
   font-family: 'Andika', sans-serif;
   font-size: 16px;
   margin: 1.2em;
-  background-image: url("../images/pigeon-background.jpeg");
+  background-image: url("../images/pigeon-background.JPEG");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover ;
