--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
   background-size: cover;
   background-position: center;
   background-image: url('../images/pigeon-background.jpeg');
-  background-color: #DDDDDD;
+  background-color: #ffffff;
   background-repeat: no-repeat;
 }
 
